# libadvaita

./: HACKING.md  NEWS  README.md  libadvaita.doap  libadwaita.syms  meson.build  meson_options.txt
build-aux/meson/: dist-data.py
debian/: changelog  control  copyright  libadvaita-1-0.install  libadvaita-1-0.symbols  libadvaita-1-dev.install  libadvaita-1-examples.install  libadwaita-1-0.install  libadwaita-1-0.symbols  libadwaita-1-dev.install  libadwaita-1-examples.install  rules  salsa-ci.yml  watch
debian/patches/: series  stylesheet-common-Use-disabled-opacity-for-disabled-pictu.patch  stylesheet-common-Use-opacity-for-all-disabled-gtk-images.patch
debian/patches/ubuntu/: style-manager-Support-Yaru-accent-colors.patch
debian/tests/: build-test  control  python-gi-test
debian/upstream/: metadata
demo/: advaita-demo.c  advaita-demo.gresources.xml  adw-demo-debug-info.c  adw-demo-debug-info.h  adw-demo-preferences-window.c  adw-demo-preferences-window.h  adw-demo-preferences-window.ui  adw-demo-window.c  adw-demo-window.h  adw-demo-window.ui  meson.build  org.gnome.Advaita1.Demo.json
demo/data/: meson.build  org.gnome.Advaita1.Demo.desktop.in  org.gnome.Advaita1.Demo.metainfo.xml.in.in
demo/pages/about/: adw-demo-page-about.c  adw-demo-page-about.h  adw-demo-page-about.ui
demo/pages/animations/: adw-demo-page-animations.c  adw-demo-page-animations.h  adw-demo-page-animations.ui
demo/pages/avatar/: adw-demo-page-avatar.c  adw-demo-page-avatar.h  adw-demo-page-avatar.ui
demo/pages/banners/: adw-demo-page-banners.c  adw-demo-page-banners.h  (+1 more)
doc/: adaptive-layouts.md  boxed-lists.md  build-howto.md  initialization.md  libadvaita.toml.in  meson.build  migrating-libhandy-1-4-to-libadwaita.md  migrating-to-adaptive-dialogs.md  migrating-to-breakpoints.md  named-colors.md  style-classes.md  styles-and-appearance.md
doc/tools/: README.md  meson.build  screenshot.c  screenshot.gresources.xml
doc/tools/data/: about-dialog-credits.ui  about-dialog.ui  about-window.ui  action-row.ui  adaptive-boxed-lists-narrow.ui  adaptive-boxed-lists-wide.ui  adaptive-sidebar-narrow-1.ui  adaptive-sidebar-narrow-2.ui  adaptive-sidebar-wide.ui  adaptive-tabs-narrow-1.ui  adaptive-tabs-narrow-2.ui  adaptive-tabs-wide.ui  adaptive-triple-pane-medium.ui  adaptive-triple-pane-narrow-1.ui  adaptive-triple-pane-narrow-2.ui  adaptive-triple-pane-narrow-3.ui  adaptive-triple-pane-wide.ui  adaptive-utility-pane-narrow.ui  adaptive-utility-pane-wide.ui  adaptive-view-switcher-narrow.ui  adaptive-view-switcher-wide.ui  alert-dialog-appearance.ui  alert-dialog.ui  app-icons.ui  application-window.ui  avatar.ui  banner.ui  bin.ui  boxed-lists.ui  breakpoint-bin.ui  button-content.ui  buttons-circular.ui  buttons-destructive-action.ui  buttons-flat.ui  buttons-opaque.ui  buttons-pill.ui  buttons-raised.ui  buttons-suggested-action.ui  cards.ui  carousel-indicator-dots.ui  (+87 more)
examples/hello-world/: hello.c  meson.build
po/: ab.po  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  eu.po  fa.po  fi.po  fr.po  fur.po  gl.po  he.po  hi.po  hr.po  hu.po  id.po  it.po  ja.po  ka.po  kab.po  kk.po  ko.po  lt.po  lv.po  meson.build  nb.po  ne.po  nl.po  oc.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  (+9 more)
src/: adw-about-dialog.c  adw-about-dialog.h  adw-about-dialog.ui  adw-about-window.c  adw-about-window.h  adw-about-window.ui  adw-action-row-private.h  adw-action-row.c  adw-action-row.h  adw-action-row.ui  adw-alert-dialog.c  adw-alert-dialog.h  adw-alert-dialog.ui  adw-animation-private.h  adw-animation-target-private.h  adw-animation-target.h  adw-animation-util.h  adw-animation.h  adw-application-window.h  adw-application.c  adw-application.h  adw-avatar.h  adw-back-button-private.h  adw-banner.c  adw-banner.h  adw-banner.ui  adw-bidi-private.h  adw-bidi.c  adw-bin.h  adw-bottom-sheet-private.h  adw-breakpoint-bin-private.h  adw-breakpoint-bin.h  adw-breakpoint-private.h  adw-breakpoint.h  adw-button-content.h  adw-carousel-indicator-dots.h  adw-carousel-indicator-lines.h  adw-carousel.h  adw-clamp-layout.h  adw-clamp-scrollable.h  (+127 more)
src/stylesheet/: README.md  _colors.scss  _common.scss  _defaults.scss  _palette-yaru.scss  advaita-stylesheet.gresources.xml  adwaita-stylesheet.gresources.xml  meson.build  yaru_accent_colors.scss
src/stylesheet/widgets/: _deprecated.scss
tests/: meson.build  org.gnome.Adwaita1.Test.metainfo.xml  test-about-dialog.c  test-about-window.c  test-action-row.c  test-alert-dialog.c  test-animation-target.c  test-animation.c  test-application-window.c  test-avatar.c  test-banner.c  test-bin.c  test-breakpoint-bin.c  test-breakpoint.c  test-button-content.c  test-carousel-indicator-dots.c  test-carousel-indicator-lines.c  test-carousel.c  test-combo-row.c  test-dialog.c  test-easing.c  test-entry-row.c  test-expander-row.c  test-flap.c  test-header-bar.c  test-leaflet.c  test-message-dialog.c  test-navigation-split-view.c  test-navigation-view.c  test-overlay-split-view.c  test-password-entry-row.c  test-preferences-dialog.c  test-preferences-group.c  test-preferences-page.c  test-preferences-row.c  test-preferences-window.c  test-spin-row.c  test-split-button.c  test-squeezer.c  test-status-page.c  (+15 more)
tests/manual/: meson.build  test-alert-dialogs.c  test-avatar-colors.c  test-breakpoints.c  test-button-states.c  test-navigation.c  test-split-views.c  test-toolbars.c  test-view-switcher-bars.c
(+57 files in other folders)
